--- a/nginx.conf
+++ b/nginx.conf
@@ -1,2 +1,73 @@
+Ref:  https://www.hostinger.in/tutorials/how-to-set-up-nginx-reverse-proxy/
+
 vi /etc/nginx/nginx.conf
 
+user  nginx;
+worker_processes 1;
+worker_cpu_affinity auto;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$ssl_protocol/$ssl_cipher '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for" '
+                      '"$upstream_response_time $pipe"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  300;
+    proxy_read_timeout 1200s;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    server_tokens off;
+}
+
+
+    
+
+vi /etc/nginx/conf.d/default.conf
+server {
+  listen       80;
+
+  location / {
+        proxy_pass http://10.154.0.5;
+  }
+  charset utf-8;
+  client_max_body_size 100m;
+
+  error_page   500 502 504  /50x.html ;
+  error_page   503  /maintenance_api.html ;
+
+  proxy_set_header    X-Real-IP       $remote_addr;
+  proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header    Host            $http_host;
+  proxy_redirect      off;
+  proxy_max_temp_file_size    0;
+  proxy_set_header    X-Forwarded-Port  80;
+
+  location = /50x.html {
+      root   /usr/share/nginx/html;
+  }
+
+  location = /maintenance_api.html {
+      root   /usr/share/nginx/html;
+  }
+}
